# pyfilesystem2

./: CHANGELOG.md  CONTRIBUTING.md  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  implementers.rst
fs/: __init__.py  _bulk.py  _fscompat.py  _ftp_parse.py  _repr.py  _typing.py  _url_tools.py  appfs.py  base.py  compress.py  copy.py  enums.py  error_tools.py  errors.py  filesize.py  ftpfs.py  glob.py  info.py  iotools.py  lrucache.py  memoryfs.py  mode.py  mountfs.py  move.py  multifs.py  osfs.py  path.py  permissions.py  subfs.py  tarfs.py  tempfs.py  test.py  time.py  tree.py  walk.py  wildcard.py  wrap.py  wrapfs.py  zipfs.py
fs/opener/: base.py  parse.py  registry.py
tests/: mark.py  requirements.txt  test_appfs.py  test_archives.py  test_base.py  test_bulk.py  test_copy.py  test_doctest.py  test_encoding.py  test_error_tools.py  test_errors.py  test_filesize.py  test_fscompat.py  test_ftp_parse.py  test_ftpfs.py  test_glob.py  test_info.py  test_iotools.py  test_lrucache.py  test_memoryfs.py  test_mirror.py  test_mode.py  test_mountfs.py  test_move.py  test_multifs.py  test_new_name.py  test_opener.py  test_osfs.py  test_path.py  test_permissions.py  test_subfs.py  test_tarfs.py  test_tempfs.py  test_time.py  test_tools.py  test_tree.py  test_url_tools.py  test_walk.py  test_wildcard.py  test_wrap.py  (+2 more)
